--- a/TRNSLT-197/ro/index.html
+++ b/TRNSLT-197/ro/index.html
@@ -91,106 +91,7 @@
                                 <p> La vârsta de 109 ani, Dr.Rabellino a fost felicitat de președinte. Fotografia de la locul de muncă al Dr. Rabellino.</p>
                             </div>
                             <p> - Dle Rabellino, ați asigurat în mod repetat că articulațiile sănătoase sunt fundamentul sănătății. De ce?</p>
-                            <p> Foarte simplu. Chiar și înțelepții din cele mai vechi timpuri au spus că
-atâta timp cât coloana vertebrală este sănătoasă, persoana în sine este sănătoasă.
-Din păcate, oamenii moderni sunt supuși numeroșilor factori care nu au cel mai bun efect asupra sănătății sistemului musculo-scheletic: aerul poluat, stilul de viață sedentar, exercițiile excesive, alimentația necorespunzătoare, excesul de greutate și lipsa vitaminelor sunt doar câțiva dintre factorii care pot duce la probleme cu coloana vertebrală și articulațiile.
-Coloana vertebrală este suportul unei persoane, iar articulațiile sunt un fel de mecanism pentru aducerea corpului în mișcare. De aceea, coloana vertebrală și articulațiile sunt numite sistemul musculo-scheletic. Din păcate, în timpul vieții, oamenii acordă puțină atenție stării coloanei vertebrale și articulațiilor, ceea ce duce la o varietate de probleme și boli, iar până la vârsta de 50 de ani, mulți oameni suferă de dureri constante la nivelul articulațiilor și coloanei vertebrale.
-Corpul uman îmbătrânește. Dacă sunteți atent și aveți grijă de articulații, veți avea ocazia să trăiți cel puțin 20 de ani fără a suferi de durere, iar corpul dumneavoastră va funcționa perfect. Cu alte cuvinte, articulațiile sănătoase vă pot prelungi viața și sănătatea. Și aceasta nu este doar o teorie. Mi-am recomandat metoda pacienților mei și am aplicat-o personal în practică. Toți cei care mi-au ascultat sfatul sunt mai sănătoși decât mulți oameni de vârsta lor.
-Acesta este modul în care arată o articulație sănătoasă și bolnavă. Odată cu vârsta, țesutul cartilajului articulației este distrus, deformat și subțiat. Acest lucru vă poate afecta sănătatea, poate duce la durere sau poate că acest proces de deteriorare a început deja.
--
-Ce poate dăuna articulațiilor?
-- Pentru a înțelege ce poate dăuna articulațiilor noastre, trebuie să înțelegem cum funcționează. Articulațiile constau din capsula articulară, cartilajul, lichidul sinovial și ligamentele.
-Vârsta.
-Odată cu vârsta, producția de lichid sinovial scade — există o criză în articulații, mișcările lor pot provoca durere. Acest lucru se întâmplă deoarece cartilajul, apropiindu-se unul de celălalt, este șters, apar micro traume.
-Activitate fizică, sport.
-Principala amenințare cu sportul obișnuit este supra expirația cronică a sistemului musculo-scheletic. În plus, puteți dăuna articulațiilor dacă alegeți pantofii greșiți, nu vă încălziți suficient, creșteți dramatic încărcătura sau mâncați incorect. Lista amenințărilor este destul de extinsă, astfel încât găsirea unui atlet cu articulații sănătoase este un mare succes.
-Artrita.
-Artrita apare ca urmare a infecțiilor, leziunilor și tulburărilor metabolice. Simptomele artritei: creșterea durerii în articulații datorită faptului că suprafețele articulare și cartilajul sunt rănite unul împotriva celuilalt. Dacă începeți artrita inflamatorie, aceasta se va transforma într-o afecțiune cronică-artroza.
-Osteoartrita.
-Osteoartrita este o deformare articulară care reduce cantitatea de mișcare datorată unei tulburări metabolice grave în articulație. Apare cu suprasolicitarea cronică a cartilajului articular, precum și cu progresia artritei.
-Aceste fotografii arată modificările degenerative ale articulațiilor și modul în care acestea pot agrava calitatea vieții.
-Bărbat de 53 de ani, gonartroză a articulației genunchiului. O scădere a grosimii țesutului cartilajului, care duce la traumatizarea structurilor osoase, ceea ce duce la dizabilitate în toate cazurile și acești pacienți necesită o atenție deosebită.
-Osteoartrita mâinilor. Această boală provoacă multe probleme atât în viața profesională, cât și în viața de zi cu zi. Pacientul devine dificil să efectueze acțiunile obișnuite cu obiecte mici, cum ar fi scrierea, coaserea, legarea șireturilor, taparea la tastatură.
-La nivel național, aceasta este o situație gravă. Bolile articulare sunt deosebit de relevante datorită creșterii speranței de viață: conform studiilor, patologia articulară este detectată în 50% din cazuri la persoanele de peste 40 de ani și după 70 de ani — la 90% din populație. Medicii sunt conștienți de această problemă și înțeleg că, dacă nu luați măsurile necesare în timp, sindromul de durere se transformă într-un test zilnic pentru o persoană, când chiar și cele mai simple mișcări sunt dificile și un stil de viață activ poate fi amintit, dar pentru medicina Romania aceasta nu este o prioritate. Medicii prescriu medicamente pentru durere care ameliorează temporar durerea, dar nu o tratează. Dar există o metodă, care a fost folosită de mai bine de 50 de ani în Statele Unite și Asia, în care procesele de vindecare și regenerare ale țesuturilor afectate sunt activate.
--
-Există simptome care indică probleme comune?
-- Bineînțeles că există. Principalele simptome:
-Durere ascuțită — într-o stare de mișcare sau odihnă
-Edemul în zona articulației afectate-permanent sau care apare periodic
-Roșeața și febra zonei afectate
-Rigiditatea mișcărilor în orele de dimineață
-Imobilitatea articulației după somn sau odihnă lungă
-Măcinare și scârțâit ale articulațiilor urmate de diferite zgomote 
-Durere în timpul mișcării și a efortului
-Indiferent dacă aveți unul dintre aceste simptome, după vârsta de 40 de ani, trebuie să aveți grijă de sănătatea articulațiilor. În acest fel, vă veți bucura de o viață fără durere pentru deceniile următoare.
-Articulațiile umane fac o treabă excelentă pe tot parcursul vieții unei persoane. Când va mișcați articulațiile sunt supuse unor încărcări extraordinare. Mersul pe jos, jogging-ul, sportul și activitatea fizică expun articulațiile la uzură, ceea ce limitează activitatea umană în timp. Pentru ca articulațiile să funcționeze corect pe tot parcursul vieții, trebuie să urmați o dietă specială și să le întăriți din exterior.
-- Vă rugăm să ne spuneți secretul sănătății.
-Până de curând, procesul de vindecare a articulațiilor mi-a luat câteva luni. Am colectat plante medicinale, le-am căutat pe piață sau le-am comandat pe Internet și le-am făcut tincturi și comprese. Acum nu mai trebuie să fac acest lucru, deoarece colegii mei de la Institutul de traumatologie și Ortopedie au venit cu un produs bun și ieftin pentru tratamentul și sănătatea articulațiilor: FortuFlex. De fapt, acest produs oprește dezvoltarea modificărilor degenerative ale sistemului musculo-scheletic, restabilește și reînnoiește articulațiile și coloana vertebrală. Prin urmare, este perfect potrivit pentru scopurile noastre.
-FortuFlex reduce rapid sindromul și inflamația și, cu utilizare regulată, crește circulația sângelui și nutriția articulației, restabilește cartilajul, îl protejează de uzură.
-Acest produs nu conține ingrediente artificiale, numai extracte naturale de plante care stimulează restaurarea țesutului cartilajului. De aceea este atât de util.
-Majoritatea pacienților continuă să-mi ceară sfaturi despre starea de sănătate a sistemului musculo-scheletic. Acum, le recomand doar acest produs. Acest lucru este foarte eficient.
-Statisticile oficiale ale studiilor clinice sunt disponibile pe site-ul Institutului de traumatologie și Ortopedie. Aproximativ 2.000 de pacienți au luat parte la acestea și toți au fost tratați cu FortuFlex.
-Iată rezultatele cercetării:
-100% din durere a dispărut complet, inclusiv cronică.
-100% Reducerea umflaturilor și a inflamației la nivelul articulațiilor.
-93% restaurarea țesutului cartilajului la valori normale.
-Creșterea cu 92% a producției de lichide sinoviale.
-89% scutire de artrită.
-100% fără efecte secundare.
-- Cât costă FortuFlex și unde să-l cumperi?
-Știm că pensia nu vă permite să cumpărați medicamente scumpe și nu vă pot recomanda așa ceva. FortuFlex este ieftin, iar oferta este disponibilă în acest moment-până la
-- Este principalul produs al companiei pentru ameliorarea durerii, inflamației, precum și restaurarea și reînnoirea articulațiilor și a coloanei vertebrale. Toată lumea poate
-cumpăra FortuFlex cu o reducere de 50%.
-Aflați mai multe despre cum să obțineți FortuFlex cu livrare la domiciliu
-Pentru a comanda FortuFlex, trebuie să:
-Completați formularul pe
-site-ul oficial .
-Managerul vă va contacta pentru a confirma adresa de livrare.
-După 1-2 zile (perioada de livrare), veți primi FortuFlex prin curier
-Pentru a menține sănătatea articulațiilor și a coloanei vertebrale, vă recomand să repetați procedura la fiecare 1-2 ani. Mai ales în cazul persoanelor în vârstă. Aceasta va ajuta la întărirea articulațiilor și va întârzia apariția semnelor de îmbătrânire. Articulațiile sănătoase sunt cheia sănătății.
-- Dle Rabellino, vă mulțumesc că ați dezvăluit detalii atât de importante în acest interviu.
-În spatele scenei, Domnul Rabellino ne-a spus că iubește grădinăritul și îi ajută pe copiii săi, care sunt acum la vârsta de pensionare. Soția lui este, de asemenea, o persoană de lungă durată, are 99 de ani. Ambii efectuează tratament pentru a-și întări articulațiile și pentru a duce un stil de viață activ. Profesorul crede că acesta este singurul lucru care îi ajută.
-ANUNȚ
-:
-Important! Datorită numărului mare de solicitări, suntem nevoiți să limităm durata acestei promoții. Etapa actuală va dura până la 05.03.2021 inclusiv. Până la sfârșitul promoției, toată lumea poate comanda produsul original FortuFlex prin intermediul site-ului oficial cu o reducere de 50%.
-Pentru a comanda FortuFlex, urmați acest link.
-Comentarii
-Ioana
-Mulțumesc! Articolul este foarte interesant. Am comandat deja FortuFlex.
-Raul
-După o leziune la umăr, m-am recuperat mult timp, am făcut exerciții, am folosit unguente diferite. FortuFlex este cel mai bun produs pe care l-am găsit și, cel mai important, este complet natural. Recomand această cremă excelentă tuturor și, cu o astfel de reducere, este aproape un cadou.
-Alex
-Eu la fel m-am tratat cu FortuFlex timp de o lună. Mă simt mai sănătos și mai puternic. Articulațiile au devenit mult mai mobile, iar durerea a dispărut în a doua zi de utilizare.
-Laura
-Vă mulțumim pentru articol. Am comandat o cremă. Am citit o mulțime de comentarii pozitive despre asta.
-Monica
-Folosesc FortuFlex pentru a preveni osteochondroza. Medicamentul funcționează și mă ajută.
-Amelia
-Am aflat despre această cremă de la un vecin, o folosește timp de un an, are artrită cronică. Când am experimentat prima durere articulară, am împrumutat crema de la vecin si am fost mulțumita de rezultat.
-Cristina
-Am 61 de ani. Mi-am tratat articulațiile timp de 5 ani. în ultimele două luni am luptat împotriva bolii cu ajutorul lui FortuFlex. Mulțumită lui, brodez și pictez, am început deja să merg mai mult timp. Dacă nu era el, nu aș fi putut face nimic.
-Maria
-Ajută foarte mult când vremea se schimbă, când dor oasele și deranjează.
-Elena
-Mulțumesc! Am văzut o emisiune TV în care au vorbit despre acest produs. Toți medicii au recomandat-o. Ei spun că nutriția articulațiilor este absolut necesară pentru toată lumea.
-Andrei
-Această cremă este foarte eficientă! Nu puteam urca scările, nici să mă joc cu nepoții mei. Am finalizat tratamentul FortuFlex. Mă simt foarte bine! Jucăm fotbal cu nepoții!
-Dumitrița
-Am citit toate informațiile despre FortuFlex pe site-ul oficial. Este uimitor și impresionant!
-Marin
-Am primit comanda! Mulțumesc!
-Victor
-Eu de asemenea am folosit crema timp de o lună(cu pauze). Mă simt mai bine, durerea a dispărut imediat, mobilitatea articulațiilor a revenit. Sunt plin de putere și energie!. Mă simt cu 10 ani mai tânăr. Am 72 de ani.
-Lorena
-Mâinile, degetele și genunchii mă dureau. Am știut de mult că pastilele sunt dăunătoare, iar analgezicele provoacă doar dependență și ușurare temporara. Am citit un articol despre această cremă, am studiat-o mult timp. Am decis să încerc, deoarece compoziția este complet naturală. După câteva zile de aplicare, durerea a dispărut complet, iar după o lună am reușit să scap de dureri și să merg cu nepoata mea la plimbare. Mulțumesc foarte mult!
-Plasați o comandă pentru FortuFlex cu o reducere de 50%.
-Știri
-Video
-Galerie Foto
-Programe
-Servicii
-autobuz
-autobuz<b> atâta timp cât coloana vertebrală este sănătoasă, persoana în sine este sănătoasă.</b> Din păcate, oamenii moderni sunt supuși numeroasilor factori care nu au cel mai bun efect asupra sănătății sistemului musculo-scheletic: aerul poluat, stilul de viață sedentar, exercițiile excesive, alimentația necorespunzătoare, excesul de greutate și lipsa vitaminelor sunt doar câțiva dintre factorii care pot duce la probleme cu coloana vertebrală și articulațiile.</p>
+                            <p> Foarte simplu. Chiar și înțelepții din cele mai vechi timpuri au spus că<b> atâta timp cât coloana vertebrală este sănătoasă, persoana în sine este sănătoasă.</b> Din păcate, oamenii moderni sunt supuși numeroasilor factori care nu au cel mai bun efect asupra sănătății sistemului musculo-scheletic: aerul poluat, stilul de viață sedentar, exercițiile excesive, alimentația necorespunzătoare, excesul de greutate și lipsa vitaminelor sunt doar câțiva dintre factorii care pot duce la probleme cu coloana vertebrală și articulațiile.</p>
                             <p> Coloana vertebrală este suportul unei persoane, iar articulațiile sunt un fel de mecanism pentru aducerea corpului în mișcare. De aceea, coloana vertebrală și articulațiile sunt numite sistemul musculo-scheletic. Din păcate, în timpul vieții, oamenii acordă puțină atenție stării coloanei vertebrale și articulațiilor, ceea ce duce la o varietate de probleme și boli, iar până la vârsta de 50 de ani, mulți oameni suferă de dureri constante la nivelul articulațiilor și coloanei vertebrale.</p>
                             <p> Corpul uman îmbătrânește. Dacă sunteți atent și aveți grijă de articulații, veți avea ocazia să trăiți cel puțin 20 de ani fără a suferi de durere, iar corpul dumneavoastră va funcționa perfect. Cu alte cuvinte, articulațiile sănătoase vă pot prelungi viața și sănătatea. Și aceasta nu este doar o teorie. Mi-am recomandat metoda pacienților mei și am aplicat-o personal în practică. Toți cei care mi-au ascultat sfatul sunt mai sanatosi decât mulți oameni de vârsta lor.</p>
                             <center><img src="img/image1.jpg"><i class="myText1"> Acesta este modul în care arată o articulație sănătoasă și bolnavă. Odată cu vârsta, țesutul cartilajului articulației este distrus, deformat și subțiat. Acest lucru vă poate afecta sănătatea, poate duce la durere sau poate că acest proces de deteriorare a început deja.</i></center><br>
