--- a/OFFERS-319/mx/index.html
+++ b/OFFERS-319/mx/index.html
@@ -129,19 +129,19 @@
                     <h5> Los efectos documentados del tratamiento hablan por sí solos:</h5>
                     <div class="chart">
                         <article style="background-color: #f3fff1;">
-                            <p> reduce y estabiliza la presión arterial, reduce</p>
+                            <p> reduce y estabiliza la presión arterial, reduce la frecuencia cardíaca</p>
                             <div style="height: 150px;"></div>
                         </article>
                         <article style="background-color: #defed7;">
-                            <p> la frecuencia cardíaca, estabiliza el azúcar en la sangre,</p>
+                            <p> estabiliza el azúcar en la sangre, elimina el colesterol malo del cuerpo</p>
                             <div style="height: 175px;"></div>
                         </article>
                         <article style="background-color: #cef9c1;">
-                            <p> elimina el colesterol malo del cuerpo, aumenta</p>
+                            <p> aumenta la elasticidad, firmeza y fuerza de los vasos sanguíneos</p>
                             <div style="height: 200px;"></div>
                         </article>
                         <article style="background-color: #bafba9;">
-                            <p> la elasticidad y la fuerza de los vasos sanguíneos, fortalece el sistema inmunológico y cardiovascular.</p>
+                            <p> fortalece el sistema inmunológico y cardiovascular.</p>
                             <div style="height: 250px;"></div>
                         </article>
                     </div>
@@ -297,7 +297,7 @@ document.write(appendNull(p.getDate()) + '.' + monthb[p.getMonth()] + '.' + p.ge
                     <a href="#order_form">
                         <article>
                             <img src="images/sidebar_img2.jpg" style="width: 68px; height: 68px;">
-                            <p> undefined</p>
+                            <p> Descripción general de la insuficiencia cardíaca</p>
                         </article>
                     </a>
                     <a href="#order_form">
@@ -315,7 +315,7 @@ document.write(appendNull(p.getDate()) + '.' + monthb[p.getMonth()] + '.' + p.ge
                     <a href="#order_form">
                         <article>
                             <img src="images/sidebar_img7.jpg" style="width: 68px; height: 68px;">
-                            <p> Как снизить сахар в крови?</p>
+                            <p> ¿Cómo bajar el azúcar en la sangre?</p>
                         </article>
                     </a>
                     <a href="#order_form">
