--- a/OFFERS-323/en/index.html
+++ b/OFFERS-323/en/index.html
@@ -22,7 +22,7 @@
   </script>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
-  <title>Nordace - 10 Reasons Why the Nordace Comino Totepack is the Best Convertible Bag for Work and City Commute </title>
+  <title>BackX Pack</title>
   <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
   <link rel="canonical" href="https://nordace.com/en/10-reasons-why-the-nordace-comino-totepack-is-the-best-convertible-bag-for-work-and-city-commute/">
   <meta name="twitter:card" content="summary">
@@ -1178,7 +1178,8 @@
                           <div id="col-1825429321" class="col medium-8 small-12 large-8">
                             <div class="col-inner">
                               <h3 style="text-align: left;"> 2. More spacious than you think. </h3>
-                              <p> The design of internal compartments allows you to easily and securely place in the backpack: laptops, tablets, cameras, school supplies, clothes, a water bottle, acharger, headphones and all other small things you need during the day.</p>
+                              <p>The design of internal compartments allows you to easily and securely place in the backpack: laptops, tablets, cameras, school supplies, clothes, a water bottle, a charger, headphones and all other small things you need during the day.
+</p>
                             </div>
                           </div>
                         </div>
@@ -1241,7 +1242,7 @@
                           <div id="col-517233806" class="col medium-8 small-12 large-8">
                             <div class="col-inner">
                               <h3 style="text-align: left;"> 5. Stay connected to everyone wherever you are</h3>
-                              <p> The backpack has a dedicated USB port on the outside where you can plug in a cable and charge your smartphone, camera, tablet or laptop. The backpack also has an headphone plugin.</p>
+                              <p>The backpack has a dedicated USB port on the outside where you can plug in a cable and charge your smartphone, camera, tablet or laptop. The backpack also has a headphone plugin.</p>
                             </div>
                           </div>
                         </div>
@@ -1262,7 +1263,7 @@
                           <div id="col-140124172" class="col medium-8 small-12 large-8">
                             <div class="col-inner">
                               <h3 style="text-align: left;"> 6. Ergonomics.</h3>
-                              <p>  Backpack has a rigid frame, dense ergonomic backrest with soft breathable inserts. Wide shoulder straps are adjustable in length, evenly distribute the weight and make carrying a backpack comfortable even when fully loaded.<strong><a href="https://rd.nordace.com/click" class="lp_discover_cta" target="_blank" rel="noopener noreferrer">  </a></strong>  </p>
+                              <p> Backpack has a rigid frame, dense ergonomic backrest with soft, flexible inserts. Wide shoulder straps are adjustable in length, evenly distribute the weight and make carrying a backpack comfortable even when fully loaded.</p>
                             </div>
                           </div>
                         </div>
