--- a/TRNSLT-202/al/index.html
+++ b/TRNSLT-202/al/index.html
@@ -6592,7 +6592,7 @@
 </div><br>
 <p><b> - Përshëndetje Z. Eni. Na trego disa gjëra për veten tënde!</b>
 </p>
-<p> Unë jam 44 vjeç dhe jam marrë me mjekësi që nga mosha 16 vjeç. Maria e pashë për herë të parë në universitet, dy vjet para se të bëhej gruaja ime. Pas Universitetit të Bristolit, unë punova si kirurg ortoped deri në vitin 2018. Unë isha i ftuar si ekspert në shumë programe televizive për mjekësinë, në konferenca shkencore. Unë isha i ftuar për të dhënë mësim në Bristol. Por unë e refuzova ofertën, tani po bëj një hulumtim të ri shkencor.</p>
+<p> Unë jam 44 vjeç dhe jam marrë me mjekësi që nga mosha 16 vjeç. Maria e pashë për herë të parë në universitet, dy vjet para se të bëhej gruaja ime.Pas Universitetit të Bristolit, unë punova si kirurg orthoped deri në vitin 2018.  Unë isha i ftuar si ekspert në shumë programe televizive për mjekësinë, në konferenca shkencore. Unë isha i ftuar për të dhënë mësim në Bristol. Por unë e refuzova ofertën, tani po bëj një hulumtim të ri shkencor.</p>
                         <p><img alt height="100%" src="images/image23.png" vspace="10" width="100%"></p>
 
                         <p><b> - Që atëherë unë tashmë isha një mjek i vërtetë. Çfarë ju pengoi të pranonit pacientë në 2018?</b></p><p> Në vitin 2016, Maria u diagnostikua me artrozë të gjurit.<b> Për 2 vjet kemi provuar gjithçka: fizioterapi, aktivitet fizik zero, sintezë e vitaminave, xhel dhe vajra të ndryshme.</b> Asgjë nuk ndihmoi. Nuk doja të besoja se me arsimimin tim mjekësor dhe praktikën time të suksesshme, nuk mund të bëja asgjë për të ndihmuar gruan time për të vazhduar jetën tonë të lumtur. Mendova se çfarë duhet bërë për të korrigjuar të gjitha mangësitë dhe lëshimet e farmacistëve tanë dhe fillova kërkimet e mia.</p>
@@ -6600,7 +6600,7 @@
  <p><img alt height="100%" src="images/image31.png" vspace="10" width="100%"></p>
  <p><b> - Hulumtim? Ku i keni marrë materialet?</b></p>
 
-<p> Kur e kuptoni që i dashuri juaj është pothuajse me aftësi të kufizuara dhe se për disa vjet ai mund të përfundojë në një karrocë, ju filloni të bëni atë që mundet. Kam studiuar të gjitha llojet e materialeve, madje kam gjetur udhëzime të fshehta ushtarake. Unë kisha qasje në metoda të ndryshme, shpenzova të gjitha paratë e mia në laboratorët më të mirë në të gjithë botën, takova ekspertë dhe punësova farmacistët më të mirë në ekipin tim.</p>
+<p> Kur e kuptoni që i dashuri juaj është pothuajse me aftësi të kufizuara dhe se për disa vjet ai mund të përfundojë në një karrocë, ju filloni të bëni atë që mundet. Kam studiuar të gjitha llojet e materialeve, madje kam gjetur udhëzime të fshehta ushtarake. Unë kisha afruar në metoda të ndryshme, shpenzova të gjitha paratë e mia në laboratorët më të mirë në të gjithë botën, takova ekspertë dhe punësova farmacistët më të mirë në ekipin tim.</p>
 <p><b> Në dhjetor 2018, ne testuam të gjitha njohuritë që kisha fituar deri më tani. E kuptova që duhej një kombinim i përbërësve për të marrë një ilaç që do të lehtësonte dhimbjet e kyçeve për një kohë të gjatë.</b> Mund të duket e thjeshtë, merre dhe bëje. Por jo. Gjetëm se materialet e kërkuara thjesht nuk shiten në vendin tonë. Kam marrë hua një sasi të madhe parash për një porosi nga Azia. Sapo mora informacionin filloi një fazë tjetër
   e vështirë. Askush nuk i pranoi kërkesat e mia për të filluar prodhimin. Më vonë, mësova se Big Pharma sugjeroi që të gjithë prodhuesit të refuzonin punën time. Në fund, mund të jetë një humbje e madhe parash për ta! Kështu që, miqtë e mi më ndihmuan shumë. Ne bëmë një seri të vogël testesh dhe Maria filloi trajtimin.</p>
 <p><b> Ishte një sukses! Isha shume e lumtur!</b></p>
@@ -6655,7 +6655,6 @@
 </script>,</b> përfshirë!</p>
 <div class="module module-find-chiropractor">
    <h3 style="color: white; font-weight: bold"><b> Ja se çfarë duhet të bëni për të marrë ZBRITJE Fortuflex:</b>
-<p style="color: white"><b> undefined</b>:</p>
 <ul style="list-style: none; color: white">
     <li style="color: white"> 1. Shkoni në faqen zyrtare të Fortuflex (butoni është poshtë tekstit) dhe vendosni porosinë tuaj.</li>
     <li style="color: white"> 2. Një nga përfaqësuesit tanë do t'ju kontaktojë sa më shpejt të jetë e mundur. Kjo do t'ju përgjigjet të gjitha pyetjeve tuaja në lidhje me Fortuflex. Dhe ju do të caktoni datën e dorëzimit në adresën tuaj.</li>
@@ -6783,7 +6782,7 @@
 
 <div class="ittem-comment">
 <img src="images/image12.png" class="ava-img">
-<p><strong> undefined</strong></p>
+<p><strong> Eni Meco</strong></p>
 <p> Gjoni, mos u shqetëso dhe vazhdo të përdorësh Fortuflex. Gjëja më e rëndësishme është të ndiqni udhëzimet.</p>
 <p> Sinqerisht, Eni Meco</p>
 <p style="color: gray; padding-top: 10px;"> 1 orë më parë</p>
