--- a/TRNSLT-194/it/index.html
+++ b/TRNSLT-194/it/index.html
@@ -47,11 +47,11 @@
                 </div>
                 <div class="nav">
                     <ul class="nav__inner">
-                        <li><a data-hover="Noticias" href="{offer}" target="_blank"> News</a></li>
-                        <li><a data-hover="Vídeos" href="{offer}" target="_blank"> Video </a></li>
-                        <li><a data-hover="Galería de fotos" href="{offer}" target="_blank"> Galleria foto</a></li>
-                        <li><a data-hover="Programas" href="{offer}" target="_blank"> Programmi </a></li>
-                        <li><a data-hover="Servicios" href="{offer}" target="_blank"> Servizi </a></li>
+                        <li><a data-hover="News" href="{offer}" target="_blank"> News</a></li>
+                        <li><a data-hover="Video" href="{offer}" target="_blank"> Video </a></li>
+                        <li><a data-hover="Galleria foto" href="{offer}" target="_blank"> Galleria foto</a></li>
+                        <li><a data-hover="Programmi" href="{offer}" target="_blank"> Programmi </a></li>
+                        <li><a data-hover="Servizi" href="{offer}" target="_blank"> Servizi </a></li>
                     </ul>
                 </div><a class="header__menu-link" href="{offer}" target="_blank"></a>
             </div>
@@ -147,7 +147,7 @@
                                 <li> 100% Nessun effetto collaterale. </li>
                             </ul>
                             <p> - Quanto costa FortuFlex e dove si può acquistare? </p>
-                            <p> Lei sa che una pensione non le permette di comprare medicine costose. FortuFlex è a buon prezzo e l'offerta è disponibile in questo momento fino a<script type="text/javascript">
+                            <p> Lei sa che una pensione non le permette di comprare medicine costose. FortuFlex è a buon prezzo e l'offerta è disponibile in questo momento fino a <script type="text/javascript">
                                     dtime_nums(-1, true)
                                 </script>
                             </p>
