--- a/OFFERS-327/ru/index.html
+++ b/OFFERS-327/ru/index.html
@@ -146,53 +146,52 @@
         </div>
       </div>
     </div>
-    <div class="sect5">
+    <div class="sect4">
       <div class="container">
-        <div class="sect5__main">
-          <h2 class="sect5__title">
+        <div class="sect4__main">
+          <h2 class="sect4__title">
             Отзывы покупателей
           </h2>
           <div class="reviews2 owl-carousel">
             <div class="item">
               <div class="comm">
-                <img class="appr" src="img/sec5_svg.svg" alt="">
-                <p>Система EXPRESS Smile просто великолепная, без боли и недорого, решила все мои проблемы с зубами.
-                  Спасибо за
-                  качественную работу!</p>
-                <img src="img/Polygon.png" class="absol" alt="">
+                <p>Несколько месяцев назад начала чувствовать сильные боли в коленях. Никакие уколы и таблетки не помогали. От них только на время исчезали болевые ощущения.
+                  Крем Fortuflex мне очень помог.  Через неделю после использования я стала больше двигаться.
+                  Прошла полный курс. Теперь опять занимаюсь любимым делом! опять хожу в любимых туфлях!
+                  Колено опухло, сильно болело, ногой еле двигала. 
+                  </p>
               </div>
               <div class="uzer">
-                <img src="img/ava_1.png" alt="">
-                <div class="name"><b>Ольга</b><span>48 лет
-                  </span></div>
+                <img src="img/ava_1.png" alt="" class="ava">
+                <div class="name"><b>Мария</b><i>39 год, инструктор по зумбе
+                  </i></div>
               </div>
             </div>
             <div class="item">
               <div class="comm">
-                <img class="appr" src="img/sec5_svg.svg" alt="">
-                <p>Система EXPRESS Smile просто великолепная, без боли и недорого, решила все мои проблемы с зубами.
-                  Спасибо за
-                  качественную работу!</p>
-                <img src="img/Polygon.png" class="absol" alt="">
+                <p>При артрозе я испробовал много разных средств. Честно сказать то, что советовали врачи, мало помогало. 
+<br> <br>
+                  Дочка  купила  Fortuflex в Интернете.
+                  Он меня просто спас: боли исчезли, начала возвращаться подвижность.
+                  Еще хочу отметить что состав натуральный и нет никаких побочных эффектов. </p>
               </div>
               <div class="uzer">
-                <img src="img/ava_1.png" alt="">
-                <div class="name"><b>Ольга</b><span>48 лет
-                  </span></div>
+                <img src="img/ava_2.png" alt="" class="ava">
+                <div class="name"><b>Мигель
+                </b><i>65 лет, пенсионер</i></div>
               </div>
             </div>
             <div class="item">
               <div class="comm">
-                <img class="appr" src="img/sec5_svg.svg" alt="">
-                <p>Система EXPRESS Smile просто великолепная, без боли и недорого, решила все мои проблемы с зубами.
-                  Спасибо за
-                  качественную работу!</p>
-                <img src="img/Polygon.png" class="absol" alt="">
+                <p>У меня была травма локтя, врачи сказали, что лечение будет очень долгим  и работать я не смогу.
+                  Но я решила попробовать крем Fortuflex и уже за неделю неделю локоть восстановился, боль исчезли, отек спал. Через две недели начал работать.
+                  <br> <br>
+                  После этого посоветовала крем родителям, у них остеохондроз</p>
               </div>
               <div class="uzer">
-                <img src="img/ava_1.png" alt="">
-                <div class="name"><b>Ольга</b><span>48 лет
-                  </span></div>
+                <img src="img/ava_3.png" alt="" class="ava">
+                <div class="name"><b>Эсперанса</b><i>41 лет, фотограф
+                  </i></div>
               </div>
             </div>
           </div>
