--- a/TRNSLT-212/it/index.html
+++ b/TRNSLT-212/it/index.html
@@ -158,7 +158,7 @@
             </section>
             <section class="block_02">
                 <div class="container">
-                    <div class="obj objBox1"><img alt class="lazy" data-original="//febatigr.com/content/kVCSfRZo1wDQFxq/img/men.png" src="img/men.png"></div>
+                    <div class="obj objBox1"><img alt class="lazy" src="img/men.png"></div>
                     <div class="row m-0">
                         <div class="col xl8 l8 m12 s12">
                             <div class="block_02-title"><span> Provate voi stessi!</span> Hai almeno uno dei seguenti sintomi?</div>
@@ -280,7 +280,7 @@
             </section>
             <section class="block_06">
                 <div class="container">
-                    <div class="obj objBox2"><img alt class="lazy" data-original="//febatigr.com/content/kVCSfRZo1wDQFxq/img/expert.png" src="img/expert.png"></div>
+                    <div class="obj objBox2"><img alt class="lazy" src="img/expert.png"></div>
                     <div class="row m-0">
                         <div class="col xl8 offset-xl4 l10 offset-l2 m12 s12">
                             <div class="block_06-title"> Opinione dell'esperto</div>
