--- a/OFFERS-327/ru/index.html
+++ b/OFFERS-327/ru/index.html
@@ -155,11 +155,12 @@
           <div class="reviews2 owl-carousel">
             <div class="item">
               <div class="comm">
-                <p>Несколько месяцев назад начала чувствовать сильные боли в коленях. Никакие уколы и таблетки не помогали. От них только на время исчезали болевые ощущения.
-                  Крем Fortuflex мне очень помог.  Через неделю после использования я стала больше двигаться.
+                <p>Несколько месяцев назад начала чувствовать сильные боли в коленях. Никакие уколы и таблетки не
+                  помогали. От них только на время исчезали болевые ощущения.
+                  Крем Fortuflex мне очень помог. Через неделю после использования я стала больше двигаться.
                   Прошла полный курс. Теперь опять занимаюсь любимым делом! опять хожу в любимых туфлях!
-                  Колено опухло, сильно болело, ногой еле двигала. 
-                  </p>
+                  Колено опухло, сильно болело, ногой еле двигала.
+                </p>
               </div>
               <div class="uzer">
                 <img src="img/ava_1.png" alt="" class="ava">
@@ -169,30 +170,62 @@
             </div>
             <div class="item">
               <div class="comm">
-                <p>При артрозе я испробовал много разных средств. Честно сказать то, что советовали врачи, мало помогало. 
-<br> <br>
-                  Дочка  купила  Fortuflex в Интернете.
+                <p>При артрозе я испробовал много разных средств. Честно сказать то, что советовали врачи, мало
+                  помогало.
+                  <br> <br>
+                  Дочка купила Fortuflex в Интернете.
                   Он меня просто спас: боли исчезли, начала возвращаться подвижность.
-                  Еще хочу отметить что состав натуральный и нет никаких побочных эффектов. </p>
+                  Еще хочу отметить что состав натуральный и нет никаких побочных эффектов.
+                </p>
               </div>
               <div class="uzer">
                 <img src="img/ava_2.png" alt="" class="ava">
                 <div class="name"><b>Мигель
-                </b><i>65 лет, пенсионер</i></div>
+                  </b><i>65 лет, пенсионер</i></div>
               </div>
             </div>
             <div class="item">
               <div class="comm">
-                <p>У меня была травма локтя, врачи сказали, что лечение будет очень долгим  и работать я не смогу.
-                  Но я решила попробовать крем Fortuflex и уже за неделю неделю локоть восстановился, боль исчезли, отек спал. Через две недели начал работать.
+                <p>У меня была травма локтя, врачи сказали, что лечение будет очень долгим и работать я не смогу.
+                  Но я решила попробовать крем Fortuflex и уже за неделю неделю локоть восстановился, боль исчезли, отек
+                  спал. Через две недели начал работать.
                   <br> <br>
-                  После этого посоветовала крем родителям, у них остеохондроз</p>
+                  После этого посоветовала крем родителям, у них остеохондроз
+                </p>
               </div>
               <div class="uzer">
                 <img src="img/ava_3.png" alt="" class="ava">
                 <div class="name"><b>Эсперанса</b><i>41 лет, фотограф
                   </i></div>
               </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="sect5">
+      <div class="container">
+        <div class="sect5__main">
+          <p class="sect5__subtitle">
+            * Результаты могут отличаться в зависимости от индивидуальных особенностей организма.
+          </p>
+          <h2 class="sect5__title">
+            <b>Крем Fortuflex</b> рекомендуют ведущие специалисты
+          </h2>
+          <div class="sect5__doc">
+            <img src="img/doc.png" alt="">
+            <div class="comment">
+              <p class="text">Крем Fortuflex действует мягко и в то же время стремительно: его активные вещества быстро
+                впитываются и целенаправленно воздействуют на очаги поражения суставов и позвоночника. Я рекомендую его
+                пациентам, которые обращаются остеохондрозом, остеопорозом, при болях в суставах и даже при травмах.
+                Fortuflex быстро снимает боль, отек и воспаление, при регулярном использовании запускает регенеративные
+                процессы, позволяет вернуться к нормальной жизни без боли. Крем также эффективен при заболеваниях
+                связанных с возрастом, сам использую его от остеохондроза. </p>
+              <p class="name">
+                <b>Иван Иванов
+                </b>
+                Врач-травматолог, хирург
+              </p>
             </div>
           </div>
         </div>
@@ -249,7 +282,7 @@
     </div>
     <div class="intro">
       <div class="container">
-        <div class="intro__main intro__main--top">
+        <div class="intro__main intro__main--bottom">
           <div class="intro__title">
             <div class="top">
               Болят <b>суставы</b> или <b>спина?</b>
@@ -296,9 +329,13 @@
                 <div class="t-hour"></div>: <div class="t-min"></div>: <div class="t-sec"></div>
               </div>
             </div>
-            <a href="#form" class="btn">ЗАКАЗАТЬ СО СКИДКОЙ</a>
+           <form id="form">
+              <input type="text" placeholder="Введите ваше имя">
+              <input type="text" placeholder="Введите ваш телефон">
+              <button class="btn">ЗАКАЗАТЬ СО СКИДКОЙ</button>
+            </form>
           </div>
-        </div>
+        </div> 
       </div>
     </div>
   </main>
